[gd_scene load_steps=9 format=3 uid="uid://dqy2fyccafqa0"]

[ext_resource type="Script" path="res://character/animal/chicken/chicken.gd" id="1_qkgqk"]
[ext_resource type="Texture2D" uid="uid://cw41npbe7586v" path="res://assets/Sprout Lands - Sprites - Basic pack/Characters/Free Chicken Sprites.png" id="1_ulrh4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2w3t"]
size = Vector2(9, 6)

[sub_resource type="Animation" id="Animation_0qo71"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeChickenSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_xhnof"]
resource_name = "Blink"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeChickenSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 0]
}

[sub_resource type="Animation" id="Animation_k0ux1"]
resource_name = "Stay"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeChickenSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_3ba0i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeChickenSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oubls"]
_data = {
"Blink": SubResource("Animation_xhnof"),
"RESET": SubResource("Animation_3ba0i"),
"Stay": SubResource("Animation_k0ux1"),
"Walk": SubResource("Animation_0qo71")
}

[node name="Chicken" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_qkgqk")

[node name="FreeChickenSprites" type="Sprite2D" parent="."]
texture = ExtResource("1_ulrh4")
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_j2w3t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oubls")
}

[node name="ChangeStateTimer" type="Timer" parent="."]

[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_change_state_timer_timeout"]
